deploy.yml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: php-test
spec:
  replicas: 1
  selector:
    matchLabels:
        app: php-wp
  template:
    metadata:
      labels:
          app: php-wp 
    spec:
      imagePullSecrets:
      - name: $SECRET_NAME 
      containers:
          - name: php-wp 
        image: $IMAGE_NAME 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: ng-port
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 0.75
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
          initialDelaySeconds: 6
          timeoutSeconds: 5
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
          initialDelaySeconds: 6
          timeoutSeconds: 5
          failureThreshold: 12

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: ng-php-wp
#  namespace: php-test
#spec:
#  type: NodePort
#  selector:
#      app: php-wp 
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 8080
#      nodePort: 30026

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ng-php-wp-ing
  namespace: php-test
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: wp.colin.org
    http:
      paths:
      - path: /
        backend:
          serviceName: ng-php-wp 
          servicePort: 80
